added search form with label and some styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <div class="header">
     <h1>Weather Dashboard</h1>
     </div>
+
+    <!-- div for search bar on left side -->
+    <div class="left">
+    <form action="/form/submit" method="GET"> 
+        <label for="city input">Search for a city</label>
+        <input type="text" name="text" class="search" placeholder="Memphis">
+        <input type="submit" name="submit" class="submit" value="Search" id="city input">
+      </form>
+      </div>
     
 </body>
 </html>
