finished 5 day forecast card building and opened js file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,46 @@
       <div class="forecast">
         <h2>This Week's Forecast</h2>
         <div class="row">
-          
+          <div class="card">Day 1
+            <div class="card-body">
+            <p> Temperature: <span id="temperature"></span> &deg;F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed <span id="wind"></span>MPH</p>
+            </div>
+           </div>
+
+           <div class="card">Day 2
+            <div class="card-body">
+            <p> Temperature: <span id="temperature"></span> &deg;F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed <span id="wind"></span>MPH</p>
+            </div>
+           </div>
+
+           <div class="card">Day 3
+            <div class="card-body">
+            <p> Temperature: <span id="temperature"></span> &deg;F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed <span id="wind"></span>MPH</p>
+            </div>
+           </div>
+
+           <div class="card">Day 4
+            <div class="card-body">
+            <p> Temperature: <span id="temperature"></span> &deg;F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed <span id="wind"></span>MPH</p>
+            </div>
+           </div>
+
+           <div class="card">Day 5
+            <div class="card-body">
+            <p> Temperature: <span id="temperature"></span> &deg;F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed <span id="wind"></span>MPH</p>
+            </div>
+           </div>
+
 
 
 
