--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class=" float left panel panel-default">
       <form action="submit" id="search-form"> 
         <label for="search-input">Search for a city</label>
-        <input type="text" name="text" class="search" placeholder="Memphis" id="search-form">
+        <input type="text" name="text" class="search" placeholder="Memphis" id="search-input">
         <input type="submit" name="submit" class="submit" value="Search" id="search">
       </form>
 
